# IDBI-Wealth-Copilot

./: .gitignore  PROMPT.md  README.md  abc copy.csv  start.sh
.claude/: launch.json
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  guardrails.py  orchestrator.py  prompts.py  tools.py
backend/app/api/: routes.py
backend/app/models/: api.py  domain.py
backend/app/providers/: __init__.py  base.py  factory.py  mock.py
backend/app/quant/: __init__.py  constants.py  goals.py  insights.py  portfolio.py  risk.py
backend/app/rag/: __init__.py  retriever.py
backend/data/: __init__.py  catalogue.py  generate.py
backend/data/synthetic/: demo_customers.json
backend/tests/: test_api.py  test_guardrails.py  test_quant_goals.py  test_quant_insights.py  test_quant_risk.py
backend/web/: app.js  avatar.js  index.html  styles.css
catalyst/: .catalystrc  DEPLOY.md  catalyst.json
catalyst/client/: app.js  client-package.json  index.html  static-api.js  static-data.js
context/: 01_PRODUCT_SPEC.md  02_ARCHITECTURE.md  03_DATASET_SPECIFICATIONS.md  04_CODE_QUALITY_GUIDE.md  05_BUILD_REQUIREMENTS.md
docs/: API.md  ARCHITECTURE.md  DEMO_GUIDE.md  HOW_IT_WORKS.md  README.md
docs/.deckwork/: build_deck.py  make_static.py
docs/.deckwork/unpacked/: [Content_Types].xml
docs/.deckwork/unpacked/ppt/: presentation.xml
docs/.deckwork/video/: assemble.py  build_frames.py  concat.txt
docs/.deckwork/video/audio/: 01.aiff
docs/screenshots/: README.md
(+60 files in other folders)
